--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="hero-card" data-animate>
           <h3>📊 Focus Snapshot</h3>
-          <p>High signal product developer and full-stack execution for teams shipping on deadlines.</p>
+          <p>High quality content developer and subject matter experience.</p>
           <div class="stats" id="stats"></div>
         </div>
       </section>
@@ -79,7 +79,7 @@
       <section class="section" id="work" data-section>
         <div class="section-title" data-animate>
           <h2>✨ Selected works</h2>
-          <p>Launches that blended product strategy, motion, and engineering craftsmanship.</p>
+          <p>Launches that blended product strategy, motion, and craftsmanship.</p>
         </div>
         <div class="cards" id="projectsGrid" data-animate></div>
       </section>
@@ -87,7 +87,7 @@
       <section class="section" id="experience" data-section>
         <div class="section-title" data-animate>
           <h2>🏃 Experiences</h2>
-          <p>Cross-functional leadership across Cross-functional softwares and data products.</p>
+          <p>Cross-functional leadership across content creation, subject matter expertise, and marketing.</p>
         </div>
         <div class="timeline" id="experienceTimeline" data-animate></div>
       </section>
