--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <header class="site-header" data-animate>
-      <div class="logo">Amrita Ranjan | Personal<span>folio</span></div>
+      <div class="logo">Amrita Ranjan | Port<span>folio</span></div>
       <nav class="site-nav">
         <a href="#work">📁 Works</a>
         <a href="#experience">💼 Experiences</a>
